# groebner-basis

./: CMakeLists.txt  algos.h  deglex.h  lex.h  main.cpp  monom.cpp  monom.h  monomial.h  polynomial.h  polynomialset.h  revlex.h
